firewall.conf
# Generated by iptables-save v1.4.21 on Tue Nov 12 21:17:00 2019
*nat
:PREROUTING ACCEPT [70:5713]
:INPUT ACCEPT [10:732]
:OUTPUT ACCEPT [44:2954]
:POSTROUTING ACCEPT [1:60]
-A POSTROUTING -s 192.168.20.3/32 -j MASQUERADE
COMMIT
# Completed on Tue Nov 12 21:17:00 2019
# Generated by iptables-save v1.4.21 on Tue Nov 12 21:17:00 2019
*filter
:INPUT DROP [8:1944]
:FORWARD DROP [45:2596]
:OUTPUT DROP [44:2954]
-A INPUT -s 192.168.20.2/32 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A FORWARD -s 192.168.20.4/32 -d 192.168.10.3/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A FORWARD -s 192.168.10.3/32 -d 192.168.20.4/32 -p tcp -m tcp --sport 8080 -j ACCEPT
-A FORWARD -s 192.168.20.3/32 -i eth2 -o eth0 -j ACCEPT
-A FORWARD -d 192.168.20.3/32 -i eth0 -o eth2 -j ACCEPT
-A OUTPUT -d 192.168.20.2/32 -p tcp -m tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
COMMIT
# Completed on Tue Nov 12 21:17:00 2019
